--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <input type="text" id="name" placeholder="Ваше имя" required>
                 <textarea id="message" placeholder="Ваше сообщение" rows="4" required></textarea>
                 <button class="feedback-btn" id="feedback-btn">Отправить</button>
+                <div id="response"></div>
             </div>
         </div>
     </div>
