--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BusinessBot</title>
-    <link rel="stylesheet" href="/static/styles.css">
-    <script src="/static/form.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/form.js" defer></script>
 </head>
 
 <body>
