--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <button>Поддержка</button>
                 </a>
             </div>
-            <img src="/static/photo.jpg" alt="businessbot.jpg">
+            <img src="/photo.jpg" alt="businessbot.jpg">
         </div>
     
         <!-- Раздел "Контакты" -->
